--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,23 +1,29 @@
 .about-container {
-    height: 50vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    
-    background-attachment: fixed;
- 
+    justify-content: center;;
+    font-family: 'Roboto Condensed, sans serif, monospace';
+    font-size: 3rem;
 }
 
 .about-container__card-container {
+    background: linear-gradient(
+        to left bottom, 
+        #6facd5af, 
+        #283db4b7), 
+        url('https://i.imgur.com/tz5nkw3.png'
+    );
+    background-size: cover;
+    background-attachment: fixed;
+    clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     height: 100%;
-    
-    
 }
 
 .about-container__card {
@@ -26,6 +32,7 @@
     border: 1px solid black;
     margin: 4rem;
     background: white;
+    text-align: center;
 }
 
 .about-title {
@@ -34,5 +41,4 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
 }
