--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,6 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif, monospace;
 }
 
