--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,3 +1,4 @@
+
 .about-container {
     height: 100vh;
     width: 100vw;
@@ -13,7 +14,7 @@
         to left bottom, 
         #6facd5af, 
         #283db4b7), 
-        url('https://i.imgur.com/tz5nkw3.png'
+        url('../images/skate-hero-2.jpeg'
     );
     background-size: cover;
     background-attachment: fixed;
@@ -29,10 +30,10 @@
 .about-container__card {
     height: 25rem;
     width: 25rem;
-    border: 1px solid black;
     margin: 4rem;
     background: white;
     text-align: center;
+    box-shadow: inset 0 0 14px 0px rgba(0, 0, 0, 0.5);
 }
 
 .about-title {
